@@ -91,6 +91,7 @@
  * 17-Jan-2007 : Fixed bug in drawDomainGridline() method (DG);
  * 03-Apr-2007 : Fixed bugs in drawBackground() method (DG);
  * 20-Jun-2007 : Removed JCommon dependencies (DG);
+ * 16-Oct-2007 : Fixed bug in range marker drawing (DG);
  * 
  */
 
@@ -514,6 +515,10 @@ public class BarRenderer3D extends BarRenderer
                                 Marker marker,
                                 Rectangle2D dataArea) {
 
+
+        Rectangle2D adjusted = new Rectangle2D.Double(dataArea.getX(), 
+                dataArea.getY() + getYOffset(), dataArea.getWidth() 
+                - getXOffset(), dataArea.getHeight() - getYOffset());
         if (marker instanceof ValueMarker) {
             ValueMarker vm = (ValueMarker) marker;
             double value = vm.getValue();
@@ -521,10 +526,6 @@ public class BarRenderer3D extends BarRenderer
             if (!range.contains(value)) {
                 return;
             }
-
-            Rectangle2D adjusted = new Rectangle2D.Double(dataArea.getX(), 
-                    dataArea.getY() + getYOffset(), dataArea.getWidth() 
-                    - getXOffset(), dataArea.getHeight() - getYOffset());
 
             GeneralPath path = null;
             PlotOrientation orientation = plot.getOrientation();
@@ -575,7 +576,7 @@ public class BarRenderer3D extends BarRenderer
         
         }
         else {
-            super.drawRangeMarker(g2, plot, axis, marker, dataArea);
+            super.drawRangeMarker(g2, plot, axis, marker, adjusted);
             // TODO: draw the interval marker with a 3D effect
         }
     }
