@@ -47,6 +47,7 @@
  *               argument check to setWallPaint() (DG);
  * 03-Apr-2007 : Fixed bugs in drawBackground() method (DG);
  * 21-Jun-2007 : Removed JCommon dependencies (DG);
+ * 16-Oct-2007 : Fixed bug in range marker drawing (DG);
  * 
  */
 
@@ -436,6 +437,11 @@ public class LineRenderer3D extends LineAndShapeRenderer
                                 Marker marker,
                                 Rectangle2D dataArea) {
 
+        Rectangle2D adjusted = new Rectangle2D.Double(dataArea.getX(), 
+                dataArea.getY() + getYOffset(), 
+                dataArea.getWidth() - getXOffset(), 
+                dataArea.getHeight() - getYOffset());
+
         if (marker instanceof ValueMarker) {
             ValueMarker vm = (ValueMarker) marker;
             double value = vm.getValue();
@@ -443,11 +449,6 @@ public class LineRenderer3D extends LineAndShapeRenderer
             if (!range.contains(value)) {
                 return;
             }
-
-            Rectangle2D adjusted = new Rectangle2D.Double(dataArea.getX(), 
-                    dataArea.getY() + getYOffset(), 
-                    dataArea.getWidth() - getXOffset(), 
-                    dataArea.getHeight() - getYOffset());
 
             GeneralPath path = null;
             PlotOrientation orientation = plot.getOrientation();
@@ -480,6 +481,10 @@ public class LineRenderer3D extends LineAndShapeRenderer
             g2.fill(path);
             g2.setPaint(marker.getOutlinePaint());
             g2.draw(path);
+        }
+        else {
+            super.drawRangeMarker(g2, plot, axis, marker, adjusted);
+            // TODO: draw the interval marker with a 3D effect
         }
     }
    
