@@ -1,3 +1,11 @@
+2007-10-16  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/renderer/category/BarRenderer3D.java
+	(drawRangeMarker): Use adjusted data area;
+	* source/org/jfree/chart/renderer/category/LineRenderer3D.java
+	(drawRangeMarker): Use adjusted data area, and call super to hanle
+	IntervalMarker (DG);
+	
 2007-10-13  Henry Proudhon  <henry.proudhon@ensmp.fr>
 
 	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
